--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
 
 <header>
 
-    <a href="#" class="logo"> <span>shaikh</span> anas </a>
+    <a href="#" class="logo"> <span>Sanjai</span> Kumar </a>
 
     <nav class="navbar">
         <a href="#home">home</a>
         <a href="#about">about</a>
-        <a href="#service">service</a>
         <a href="#experience">experience</a>
         <a href="#portfolio">portfolio</a>
         <a href="#contact">contact</a>
@@ -54,14 +53,13 @@
 
     <div class="content">
         <span class="hi"> hi there... </span>
-        <h3> i am <span> shaikh anas </span> </h3>
+        <h3> i am <span> Sanjaikumar </span> </h3>
         <p class="info"> i am a front-end developer </p>
-        <p class="text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias quidem excepturi natus iste ut. Alias, quod? Earum pariatur obcaecati dolorum! </p>
         <a href="#about" class="btn">about me</a>
     </div>
 
     <div class="image">
-        <img src="images/home-img.png" alt="">
+        <img src="images/user-img-transparent.png" alt="">
     </div>
 
 </section>
@@ -77,28 +75,27 @@
 <div class="row-1">
 
     <div class="image">
-        <img src="images/about-img.jpg" alt="">
+        <img src="images/user-img.png" alt="">
     </div>
 
     <div class="content">
-        <h3> my name is shaikh anas & i am a font-end developer </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi error molestias impedit officia! Exercitationem dignissimos esse eos quas nisi impedit delectus, voluptate ullam iste nostrum at. Dolor culpa eaque omnis.</p>
+        <h3> my name is <span>Sanjaikumar N</span></h3>
+        <p>Web Developer with a passion for web application development and Skilled in conceptualizing, designing, development, and deploying software containing logical and mathematical solutions to business problems . I can use my skills to the advantage of the company while having the scope to develop my own skills.</p>
         <div class="box-container">
             <div class="box">
                 <p> <span> age : </span> 21 </p>
                 <p> <span> gender : </span> male </p>
-                <p> <span> language : </span> hindi, english </p>
+                <p> <span> language : </span>English,Tamil </p>
                 <p> <span> work : </span> front-end developer </p>
             </div>
             <div class="box">
                 <p> <span> freelance : </span> available </p>
-                <p> <span> phone : </span> +123-456-7890 </p>
-                <p> <span> email : </span> shaikhanas@gmail.com </p>
+                <p> <span> email : </span> nsksanjai@gmail.com </p>
                 <p> <span> country : </span> india </p>
             </div>
         </div>
-        <a href="#" class="btn">download CV</a>
-        <a href="#" class="btn">hire me</a>
+        <!-- <a href="#" class="btn">download CV</a>
+        <a href="#" class="btn">hire me</a> -->
     </div>
 
 </div>
@@ -126,82 +123,13 @@
         </div>
     </div>
 
-    <div class="box-container">
-
-        <div class="box">
-            <h3> >> 2+ </h3>
-            <p>years of experience</p>
-        </div>
-        <div class="box">
-            <h3> >> 250+ </h3>
-            <p>happy clients</p>
-        </div>
-        <div class="box">
-            <h3> >> 150+ </h3>
-            <p>projects completed</p>
-        </div>
-        <div class="box">
-            <h3> >> 12+ </h3>
-            <p>awards won</p>
-        </div>
-
-    </div>
+    
 
 </div>
 
 </section>
 
 <!-- about section ends -->
-
-<!-- service section starts  -->
-
-<section class="service" id="service">
-
-<h1 class="heading"> <span> my </span> services </h1>
-
-    <div class="box-container">
-
-        <div class="box">
-            <i class="fas fa-code"></i>
-            <h3>web design</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, facere?</p>
-        </div>
-
-        <div class="box">
-            <i class="fas fa-paint-brush"></i>
-            <h3>graphic design</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, facere?</p>
-        </div>
-
-        <div class="box">
-            <i class="fas fa-mobile"></i>
-            <h3>responsive design</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, facere?</p>
-        </div>
-
-        <div class="box">
-            <i class="fas fa-bullhorn"></i>
-            <h3>seo marketing</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, facere?</p>
-        </div>
-
-        <div class="box">
-            <i class="fas fa-chart-line"></i>
-            <h3>digital marketing</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, facere?</p>
-        </div>
-
-        <div class="box">
-            <i class="fas fa-envelope"></i>
-            <h3>email marketing</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, facere?</p>
-        </div>
-
-    </div>
-
-</section>
-
-<!-- service section ends -->
 
 <!-- experience section starts  -->
 
@@ -213,49 +141,17 @@
 
         <div class="box">
             <div class="content">
-                <span> 2015 - 2016 </span>
-                <h3>front-end development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae vel quasi consectetur expedita ipsam similique maiores ipsa? Error, debitis ullam.</p>
+                <span> AUG 13 - FEB 20 </span>
+                <h3>Infotix techno solutions</h3>
+                <p>front End Developer</p>
             </div>
         </div>
 
         <div class="box">
             <div class="content">
-                <span> 2016 - 2017 </span>
-                <h3>front-end development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae vel quasi consectetur expedita ipsam similique maiores ipsa? Error, debitis ullam.</p>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="content">
-                <span> 2017 - 2018 </span>
-                <h3>front-end development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae vel quasi consectetur expedita ipsam similique maiores ipsa? Error, debitis ullam.</p>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="content">
-                <span> 2018 - 2019 </span>
-                <h3>front-end development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae vel quasi consectetur expedita ipsam similique maiores ipsa? Error, debitis ullam.</p>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="content">
-                <span> 2019 - 2020 </span>
-                <h3>front-end development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae vel quasi consectetur expedita ipsam similique maiores ipsa? Error, debitis ullam.</p>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="content">
-                <span> 2020 - 2021 </span>
-                <h3>front-end development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae vel quasi consectetur expedita ipsam similique maiores ipsa? Error, debitis ullam.</p>
+                <span>Aug 15 - FEb 23</span>
+                <h3>Astrople Technology Solutions</h3>
+                <p>Front End developer</p>
             </div>
         </div>
 
@@ -265,79 +161,6 @@
 
 <!-- experience section ends -->
 
-<!-- portfolio section starts  -->
-
-<section class="portfolio" id="portfolio">
-
-    <h1 class="heading"> <span> my </span> portfolio </h1>
-
-    <div class="box-container">
-
-        <div class="box">
-            <img src="images/img-1.jpg" alt="">
-            <h3> project 01 </h3>
-            <div class="icons">
-                <a href="#" class="fas fa-link"></a>
-                <a href="#" class="fas fa-share"></a>
-                <a href="#" class="fas fa-search"></a>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="images/img-2.jpg" alt="">
-            <h3> project 02 </h3>
-            <div class="icons">
-                <a href="#" class="fas fa-link"></a>
-                <a href="#" class="fas fa-share"></a>
-                <a href="#" class="fas fa-search"></a>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="images/img-3.jpg" alt="">
-            <h3> project 03 </h3>
-            <div class="icons">
-                <a href="#" class="fas fa-link"></a>
-                <a href="#" class="fas fa-share"></a>
-                <a href="#" class="fas fa-search"></a>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="images/img-4.jpg" alt="">
-            <h3> project 04 </h3>
-            <div class="icons">
-                <a href="#" class="fas fa-link"></a>
-                <a href="#" class="fas fa-share"></a>
-                <a href="#" class="fas fa-search"></a>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="images/img-5.jpg" alt="">
-            <h3> project 05 </h3>
-            <div class="icons">
-                <a href="#" class="fas fa-link"></a>
-                <a href="#" class="fas fa-share"></a>
-                <a href="#" class="fas fa-search"></a>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="images/img-6.jpg" alt="">
-            <h3> project 06 </h3>
-            <div class="icons">
-                <a href="#" class="fas fa-link"></a>
-                <a href="#" class="fas fa-share"></a>
-                <a href="#" class="fas fa-search"></a>
-            </div>
-        </div>
-
-    </div>
-
-</section>
-
-<!-- portfolio section ends -->
 
 <!-- contact section starts  -->
 
@@ -350,21 +173,20 @@
         <div class="icons">
             <i class="fas fa-envelope"></i>
             <h3>my email</h3>
-            <p>shaikhanas@gmail.com</p>
-            <p>anasbhai@gmail.com</p>
+            <p>nsksanjai@gmail.com</p>
         </div>
 
         <div class="icons">
             <i class="fas fa-phone"></i>
             <h3>my number</h3>
-            <p>+123-456-7890</p>
-            <p>+111-222-3333</p>
+            <p>Update Soon</p>
+            
         </div>
 
         <div class="icons">
             <i class="fas fa-map-marker-alt"></i>
             <h3>my address</h3>
-            <p>ajis class, jogeshwaris west, mumbai, india - 400104</p>
+            <p>Chennai</p>
         </div>
 
     </div>
@@ -383,7 +205,7 @@
 
         </form>
 
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30153.788252261566!2d72.82321484621745!3d19.141690214227783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b63aceef0c69%3A0x2aa80cf2287dfa3b!2sJogeshwari%20West%2C%20Mumbai%2C%20Maharashtra%20400047!5e0!3m2!1sen!2sin!4v1625069635379!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+        <!-- <iframe class="map" src="#" allowfullscreen="" loading="lazy"></iframe> -->
 
     </div>
 
@@ -393,7 +215,8 @@
 <!-- contact section ends -->
 
 <!-- footer section  -->
-<footer class="footer"> created by <span> mr. web designer </span> | all rights reserved! </footer>
+<footer class="footer"> created by <span> 
+    Sanjaikumar N </span> | all rights reserved! </footer>
 
 
 
